# bool-mappings

./: Cargo.toml  README.md
src/: lib.rs
