[package]
name = "bool-mappings"
description = "Useful extensions to convert `bool` to other Rust types"
version = "0.1.2"
edition = "2021"
authors = ["Alexander Walter <alexander@wackazong.com>"]
license = "MIT"
homepage = "https://wackazong.com"
readme = "README.md"
repository = "https://github.com/wackazong/bool-mappings/"
